--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mi10-mqtt-module"
-version = "2022.2.0"
+version = "2022.2.0+1"
 description = ""
 authors = ["Petr Cezner <petr.cezner@factorio.cz>"]
 
