--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pymongo = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
+autopep8 = "^1.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
